--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
-body{
-    background-color:powderblue;
+div.css-fg4pbf {
+    background-image: linear-gradient(to left, rgba(255,0,0,0), rgba(255,0,0,1));
 }
