--- a/style.css
+++ b/style.css
@@ -2,6 +2,6 @@ div.css-zbg2rx{
     background-color: #feae96;
     background-image: linear-gradient(315deg, #feae96 0%, #fe0944 74%);
 }
-div.css-10trblm{
+div.css-nlntq9{
     margin-top:100px;
 }
