--- a/style.css
+++ b/style.css
@@ -2,4 +2,12 @@ div.css-zbg2rx{
     background-color: #feae96;
     background-image: linear-gradient(315deg, #feae96 0%, #fe0944 74%);
 }
+div.css-1kyxreq{
+    margin-bottom:5px;
+    padding-top:0px;
+}
+
+
+
+
 
